[project]
name = "agenc"
version = "0.3.0"
description = "A code review agent that connects to any OpenAI-compatible endpoint."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
]

[project.scripts]
agenc = "agent:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "config", "git", "sandbox", "tools"]

